# spiel_frontend

./: .gitignore  .gitmodules  COPYING  LICENSE  README.md  ccip_receive_token_arg.txt  ccip_receive_token_bnb_arg.txt  ccip_receive_token_goerli_arg.txt  ccip_receive_token_mumbai_arg.txt  ccip_receive_token_sepolia_arg.txt  ccip_send_tokens_arg.txt  destroy_box_arg.txt  docker-compose.yml  feed_tokens_price_arg.txt  remappings.txt  request_prize_args.txt
backend/: .gitignore  Cargo.toml
backend/src/: db.rs  main.rs  schema.rs
backend/src/docs/: docs_handlers.rs  dtos.rs  filters.rs  mod.rs
backend/src/error/: dtos.rs  error_handler.rs  mod.rs
backend/src/guard/: dtos.rs  filters.rs  guard_handlers.rs  mod.rs
backend/src/packtingo/: dtos.rs  filters.rs  mod.rs  models.rs  packtingo_handlers.rs
frontend/: .gitignore  Cargo.toml  gameserver.py  web4dlife.html
frontend/src/: main.rs
frontend/web/: index.html
godot-engine/: .gitignore  bot.tscn  config_env.gd  edit_text.gd  edit_text.tscn  export_presets.cfg  icon.svg.import  loading_scene.gd  loading_scene.tscn  main_scene.gd  main_scene.tscn  player.gd  player.tscn  project.godot  state.gd  switch.gd  user_interface.gd  user_interface.tscn  utils.gd  world.tscn
godot-engine/assets/: bot.glb  bot.glb.import  building.glb  building.glb.import  building_ceramic-roof-tiles-2400-mm-architextures.jpg.import  building_ceramic-roof-tiles-2400-mm-architextures.png.import  building_door_normal.jpg.import  building_door_normal.png.import  building_door_texture.jpg.import  building_door_texture.png.import  building_roof_normal.png.import  ground.glb.import  ground_ground_normal.jpg.import  ground_ground_normal.png.import  (+6 more)
migrations/: Cargo.toml  makefile
migrations/src/: main.rs  rollback.rs
migrations/src/migrations/: add_request_id_to_prize.rs  change_score_column.rs  create_account.rs  create_prize.rs  create_score.rs  helpers.rs  mod.rs
prize-api/: .gitignore  README.md  package.json  tsconfig.build.json  tsconfig.json
src/: CCIPReceiverToken.sol  CCIPSendTokens.sol  DestroyBox.sol  FeedTokensPrice.sol  RequestPrize.sol
test/: CCIPSendTokensTest.sol  DestroyBoxTest.sol  FeedTokensPriceTest.sol
(+120 files in other folders)
