[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.34.0", features = ["full"]}
warp={version="0.3.6", features = ["tls"]}
siwe = {version = "0.6", features = ["serde", "ethers", "typed-builder"]}
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.183"
sled = "0.34.7"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
bcrypt = "0.15.0"
hex="0.4.3"
log="0.4.20"
chrono = {version="0.4.31", features= ["serde", "rustc-serialize"]}
pretty_env_logger = "0.5.0"
uuid={version="1.6.1", features = ["serde", "v4"]}
utoipa= {version = "4.1.0", features=["chrono"]}
utoipa-swagger-ui = "4.0.0"
anyhow = "1.0.75"
diesel = {version = "2.1.4", features = ["postgres", "r2d2", "chrono", "serde_json"]}
diesel-derive-enum = {version= "2.1", features= ["postgres"]}