[package]
name = "refinery_migrations"
version = "0.1.0"
authors = ["spieljs <spieljs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15"
refinery= {version="0.8", features=["postgres"]}
barrel= {version="0.7", features=["pg"]}
postgres="0.19"